include/codata_constants_2018.h

ADD_IMPORT extern const double SHIELDED_PROTON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double U_SHIELDED_PROTON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double SHIELDING_DIFFERENCE_OF_D_AND_P_IN_HD;/**<  */
ADD_IMPORT extern const double U_SHIELDING_DIFFERENCE_OF_D_AND_P_IN_HD;/**<  */
ADD_IMPORT extern const double SHIELDING_DIFFERENCE_OF_T_AND_P_IN_HT;/**<  */
ADD_IMPORT extern const double U_SHIELDING_DIFFERENCE_OF_T_AND_P_IN_HT;/**<  */
ADD_IMPORT extern const double SPEED_OF_LIGHT_IN_VACUUM;/**< m s^-1 */
ADD_IMPORT extern const double U_SPEED_OF_LIGHT_IN_VACUUM;/**< m s^-1 */
ADD_IMPORT extern const double STANDARD_ACCELERATION_OF_GRAVITY;/**< m s^-2 */
ADD_IMPORT extern const double U_STANDARD_ACCELERATION_OF_GRAVITY;/**< m s^-2 */
ADD_IMPORT extern const double STANDARD_ATMOSPHERE;/**< Pa */
ADD_IMPORT extern const double U_STANDARD_ATMOSPHERE;/**< Pa */
ADD_IMPORT extern const double STANDARD_STATE_PRESSURE;/**< Pa */
ADD_IMPORT extern const double U_STANDARD_STATE_PRESSURE;/**< Pa */
ADD_IMPORT extern const double STEFAN_BOLTZMANN_CONSTANT;/**< W m^-2 K^-4 */
ADD_IMPORT extern const double U_STEFAN_BOLTZMANN_CONSTANT;/**< W m^-2 K^-4 */
ADD_IMPORT extern const double TAU_COMPTON_WAVELENGTH;/**< m */
ADD_IMPORT extern const double U_TAU_COMPTON_WAVELENGTH;/**< m */
ADD_IMPORT extern const double TAU_ELECTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_TAU_ELECTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double TAU_ENERGY_EQUIVALENT;/**< MeV */
ADD_IMPORT extern const double U_TAU_ENERGY_EQUIVALENT;/**< MeV */
ADD_IMPORT extern const double TAU_MASS;/**< kg */
ADD_IMPORT extern const double U_TAU_MASS;/**< kg */
ADD_IMPORT extern const double TAU_MASS_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double U_TAU_MASS_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double TAU_MASS_IN_U;/**< u */
ADD_IMPORT extern const double U_TAU_MASS_IN_U;/**< u */
ADD_IMPORT extern const double TAU_MOLAR_MASS;/**< kg mol^-1 */
ADD_IMPORT extern const double U_TAU_MOLAR_MASS;/**< kg mol^-1 */
ADD_IMPORT extern const double TAU_MUON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_TAU_MUON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double TAU_NEUTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_TAU_NEUTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double TAU_PROTON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_TAU_PROTON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double THOMSON_CROSS_SECTION;/**< m^2 */
ADD_IMPORT extern const double U_THOMSON_CROSS_SECTION;/**< m^2 */
ADD_IMPORT extern const double TRITON_ELECTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_TRITON_ELECTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double TRITON_G_FACTOR;/**<  */
ADD_IMPORT extern const double U_TRITON_G_FACTOR;/**<  */
ADD_IMPORT extern const double TRITON_MAG__MOM;/**< J T^-1 */
ADD_IMPORT extern const double U_TRITON_MAG__MOM;/**< J T^-1 */
ADD_IMPORT extern const double TRITON_MAG__MOM__TO_BOHR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double U_TRITON_MAG__MOM__TO_BOHR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double TRITON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double U_TRITON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double TRITON_MASS;/**< kg */
ADD_IMPORT extern const double U_TRITON_MASS;/**< kg */
ADD_IMPORT extern const double TRITON_MASS_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double U_TRITON_MASS_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double TRITON_MASS_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */
ADD_IMPORT extern const double U_TRITON_MASS_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */
ADD_IMPORT extern const double TRITON_MASS_IN_U;/**< u */
ADD_IMPORT extern const double U_TRITON_MASS_IN_U;/**< u */
ADD_IMPORT extern const double TRITON_MOLAR_MASS;/**< kg mol^-1 */
ADD_IMPORT extern const double U_TRITON_MOLAR_MASS;/**< kg mol^-1 */
ADD_IMPORT extern const double TRITON_PROTON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_TRITON_PROTON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double TRITON_RELATIVE_ATOMIC_MASS;/**<  */
ADD_IMPORT extern const double U_TRITON_RELATIVE_ATOMIC_MASS;/**<  */
ADD_IMPORT extern const double TRITON_TO_PROTON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double U_TRITON_TO_PROTON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double UNIFIED_ATOMIC_MASS_UNIT;/**< kg */
ADD_IMPORT extern const double U_UNIFIED_ATOMIC_MASS_UNIT;/**< kg */
ADD_IMPORT extern const double VACUUM_ELECTRIC_PERMITTIVITY;/**< F m^-1 */
ADD_IMPORT extern const double U_VACUUM_ELECTRIC_PERMITTIVITY;/**< F m^-1 */
ADD_IMPORT extern const double VACUUM_MAG__PERMEABILITY;/**< N A^-2 */
ADD_IMPORT extern const double U_VACUUM_MAG__PERMEABILITY;/**< N A^-2 */
ADD_IMPORT extern const double VON_KLITZING_CONSTANT;/**< ohm */
ADD_IMPORT extern const double U_VON_KLITZING_CONSTANT;/**< ohm */
ADD_IMPORT extern const double WEAK_MIXING_ANGLE;/**<  */
ADD_IMPORT extern const double U_WEAK_MIXING_ANGLE;/**<  */
ADD_IMPORT extern const double WIEN_FREQUENCY_DISPLACEMENT_LAW_CONSTANT;/**< Hz K^-1 */
ADD_IMPORT extern const double U_WIEN_FREQUENCY_DISPLACEMENT_LAW_CONSTANT;/**< Hz K^-1 */
ADD_IMPORT extern const double WIEN_WAVELENGTH_DISPLACEMENT_LAW_CONSTANT;/**< m K */
ADD_IMPORT extern const double U_WIEN_WAVELENGTH_DISPLACEMENT_LAW_CONSTANT;/**< m K */
ADD_IMPORT extern const double W_TO_Z_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_W_TO_Z_MASS_RATIO;/**<  */