src/codata_.f90


real(c_double), protected, bind(C,name="SHIELDED_PROTON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO") :: &
SHIELDED_PROTON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO= !! 
real(c_double), protected, bind(C,name="U_SHIELDED_PROTON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO") :: &
U_SHIELDED_PROTON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO= !! 

real(c_double), protected, bind(C,name="SHIELDING_DIFFERENCE_OF_D_AND_P_IN_HD") :: &
SHIELDING_DIFFERENCE_OF_D_AND_P_IN_HD= !! 
real(c_double), protected, bind(C,name="U_SHIELDING_DIFFERENCE_OF_D_AND_P_IN_HD") :: &
U_SHIELDING_DIFFERENCE_OF_D_AND_P_IN_HD= !! 

real(c_double), protected, bind(C,name="SHIELDING_DIFFERENCE_OF_T_AND_P_IN_HT") :: &
SHIELDING_DIFFERENCE_OF_T_AND_P_IN_HT= !! 
real(c_double), protected, bind(C,name="U_SHIELDING_DIFFERENCE_OF_T_AND_P_IN_HT") :: &
U_SHIELDING_DIFFERENCE_OF_T_AND_P_IN_HT= !! 

real(c_double), protected, bind(C,name="SPEED_OF_LIGHT_IN_VACUUM") :: &
SPEED_OF_LIGHT_IN_VACUUM= !! 
real(c_double), protected, bind(C,name="U_SPEED_OF_LIGHT_IN_VACUUM") :: &
U_SPEED_OF_LIGHT_IN_VACUUM= !! 

real(c_double), protected, bind(C,name="STANDARD_ACCELERATION_OF_GRAVITY") :: &
STANDARD_ACCELERATION_OF_GRAVITY= !! 
real(c_double), protected, bind(C,name="U_STANDARD_ACCELERATION_OF_GRAVITY") :: &
U_STANDARD_ACCELERATION_OF_GRAVITY= !! 

real(c_double), protected, bind(C,name="STANDARD_ATMOSPHERE") :: &
STANDARD_ATMOSPHERE= !! 
real(c_double), protected, bind(C,name="U_STANDARD_ATMOSPHERE") :: &
U_STANDARD_ATMOSPHERE= !! 

real(c_double), protected, bind(C,name="STANDARD_STATE_PRESSURE") :: &
STANDARD_STATE_PRESSURE= !! 
real(c_double), protected, bind(C,name="U_STANDARD_STATE_PRESSURE") :: &
U_STANDARD_STATE_PRESSURE= !! 

real(c_double), protected, bind(C,name="STEFAN_BOLTZMANN_CONSTANT") :: &
STEFAN_BOLTZMANN_CONSTANT= !! 
real(c_double), protected, bind(C,name="U_STEFAN_BOLTZMANN_CONSTANT") :: &
U_STEFAN_BOLTZMANN_CONSTANT= !! 

real(c_double), protected, bind(C,name="TAU_COMPTON_WAVELENGTH") :: &
TAU_COMPTON_WAVELENGTH= !! 
real(c_double), protected, bind(C,name="U_TAU_COMPTON_WAVELENGTH") :: &
U_TAU_COMPTON_WAVELENGTH= !! 

real(c_double), protected, bind(C,name="TAU_ELECTRON_MASS_RATIO") :: &
TAU_ELECTRON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_TAU_ELECTRON_MASS_RATIO") :: &
U_TAU_ELECTRON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="TAU_ENERGY_EQUIVALENT") :: &
TAU_ENERGY_EQUIVALENT= !! 
real(c_double), protected, bind(C,name="U_TAU_ENERGY_EQUIVALENT") :: &
U_TAU_ENERGY_EQUIVALENT= !! 

real(c_double), protected, bind(C,name="TAU_MASS") :: &
TAU_MASS= !! 
real(c_double), protected, bind(C,name="U_TAU_MASS") :: &
U_TAU_MASS= !! 

real(c_double), protected, bind(C,name="TAU_MASS_ENERGY_EQUIVALENT") :: &
TAU_MASS_ENERGY_EQUIVALENT= !! 
real(c_double), protected, bind(C,name="U_TAU_MASS_ENERGY_EQUIVALENT") :: &
U_TAU_MASS_ENERGY_EQUIVALENT= !! 

real(c_double), protected, bind(C,name="TAU_MASS_IN_U") :: &
TAU_MASS_IN_U= !! 
real(c_double), protected, bind(C,name="U_TAU_MASS_IN_U") :: &
U_TAU_MASS_IN_U= !! 

real(c_double), protected, bind(C,name="TAU_MOLAR_MASS") :: &
TAU_MOLAR_MASS= !! 
real(c_double), protected, bind(C,name="U_TAU_MOLAR_MASS") :: &
U_TAU_MOLAR_MASS= !! 

real(c_double), protected, bind(C,name="TAU_MUON_MASS_RATIO") :: &
TAU_MUON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_TAU_MUON_MASS_RATIO") :: &
U_TAU_MUON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="TAU_NEUTRON_MASS_RATIO") :: &
TAU_NEUTRON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_TAU_NEUTRON_MASS_RATIO") :: &
U_TAU_NEUTRON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="TAU_PROTON_MASS_RATIO") :: &
TAU_PROTON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_TAU_PROTON_MASS_RATIO") :: &
U_TAU_PROTON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="THOMSON_CROSS_SECTION") :: &
THOMSON_CROSS_SECTION= !! 
real(c_double), protected, bind(C,name="U_THOMSON_CROSS_SECTION") :: &
U_THOMSON_CROSS_SECTION= !! 

real(c_double), protected, bind(C,name="TRITON_ELECTRON_MASS_RATIO") :: &
TRITON_ELECTRON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_TRITON_ELECTRON_MASS_RATIO") :: &
U_TRITON_ELECTRON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="TRITON_G_FACTOR") :: &
TRITON_G_FACTOR= !! 
real(c_double), protected, bind(C,name="U_TRITON_G_FACTOR") :: &
U_TRITON_G_FACTOR= !! 

real(c_double), protected, bind(C,name="TRITON_MAG__MOM") :: &
TRITON_MAG__MOM= !! 
real(c_double), protected, bind(C,name="U_TRITON_MAG__MOM") :: &
U_TRITON_MAG__MOM= !! 

real(c_double), protected, bind(C,name="TRITON_MAG__MOM__TO_BOHR_MAGNETON_RATIO") :: &
TRITON_MAG__MOM__TO_BOHR_MAGNETON_RATIO= !! 
real(c_double), protected, bind(C,name="U_TRITON_MAG__MOM__TO_BOHR_MAGNETON_RATIO") :: &
U_TRITON_MAG__MOM__TO_BOHR_MAGNETON_RATIO= !! 

real(c_double), protected, bind(C,name="TRITON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO") :: &
TRITON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO= !! 
real(c_double), protected, bind(C,name="U_TRITON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO") :: &
U_TRITON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO= !! 

real(c_double), protected, bind(C,name="TRITON_MASS") :: &
TRITON_MASS= !! 
real(c_double), protected, bind(C,name="U_TRITON_MASS") :: &
U_TRITON_MASS= !! 

real(c_double), protected, bind(C,name="TRITON_MASS_ENERGY_EQUIVALENT") :: &
TRITON_MASS_ENERGY_EQUIVALENT= !! 
real(c_double), protected, bind(C,name="U_TRITON_MASS_ENERGY_EQUIVALENT") :: &
U_TRITON_MASS_ENERGY_EQUIVALENT= !! 

real(c_double), protected, bind(C,name="TRITON_MASS_ENERGY_EQUIVALENT_IN_MEV") :: &
TRITON_MASS_ENERGY_EQUIVALENT_IN_MEV= !! 
real(c_double), protected, bind(C,name="U_TRITON_MASS_ENERGY_EQUIVALENT_IN_MEV") :: &
U_TRITON_MASS_ENERGY_EQUIVALENT_IN_MEV= !! 

real(c_double), protected, bind(C,name="TRITON_MASS_IN_U") :: &
TRITON_MASS_IN_U= !! 
real(c_double), protected, bind(C,name="U_TRITON_MASS_IN_U") :: &
U_TRITON_MASS_IN_U= !! 

real(c_double), protected, bind(C,name="TRITON_MOLAR_MASS") :: &
TRITON_MOLAR_MASS= !! 
real(c_double), protected, bind(C,name="U_TRITON_MOLAR_MASS") :: &
U_TRITON_MOLAR_MASS= !! 

real(c_double), protected, bind(C,name="TRITON_PROTON_MASS_RATIO") :: &
TRITON_PROTON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_TRITON_PROTON_MASS_RATIO") :: &
U_TRITON_PROTON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="TRITON_RELATIVE_ATOMIC_MASS") :: &
TRITON_RELATIVE_ATOMIC_MASS= !! 
real(c_double), protected, bind(C,name="U_TRITON_RELATIVE_ATOMIC_MASS") :: &
U_TRITON_RELATIVE_ATOMIC_MASS= !! 

real(c_double), protected, bind(C,name="TRITON_TO_PROTON_MAG__MOM__RATIO") :: &
TRITON_TO_PROTON_MAG__MOM__RATIO= !! 
real(c_double), protected, bind(C,name="U_TRITON_TO_PROTON_MAG__MOM__RATIO") :: &
U_TRITON_TO_PROTON_MAG__MOM__RATIO= !! 

real(c_double), protected, bind(C,name="UNIFIED_ATOMIC_MASS_UNIT") :: &
UNIFIED_ATOMIC_MASS_UNIT= !! 
real(c_double), protected, bind(C,name="U_UNIFIED_ATOMIC_MASS_UNIT") :: &
U_UNIFIED_ATOMIC_MASS_UNIT= !! 

real(c_double), protected, bind(C,name="VACUUM_ELECTRIC_PERMITTIVITY") :: &
VACUUM_ELECTRIC_PERMITTIVITY= !! 
real(c_double), protected, bind(C,name="U_VACUUM_ELECTRIC_PERMITTIVITY") :: &
U_VACUUM_ELECTRIC_PERMITTIVITY= !! 

real(c_double), protected, bind(C,name="VACUUM_MAG__PERMEABILITY") :: &
VACUUM_MAG__PERMEABILITY= !! 
real(c_double), protected, bind(C,name="U_VACUUM_MAG__PERMEABILITY") :: &
U_VACUUM_MAG__PERMEABILITY= !! 

real(c_double), protected, bind(C,name="VON_KLITZING_CONSTANT") :: &
VON_KLITZING_CONSTANT= !! 
real(c_double), protected, bind(C,name="U_VON_KLITZING_CONSTANT") :: &
U_VON_KLITZING_CONSTANT= !! 

real(c_double), protected, bind(C,name="WEAK_MIXING_ANGLE") :: &
WEAK_MIXING_ANGLE= !! 
real(c_double), protected, bind(C,name="U_WEAK_MIXING_ANGLE") :: &
U_WEAK_MIXING_ANGLE= !! 

real(c_double), protected, bind(C,name="WIEN_FREQUENCY_DISPLACEMENT_LAW_CONSTANT") :: &
WIEN_FREQUENCY_DISPLACEMENT_LAW_CONSTANT= !! 
real(c_double), protected, bind(C,name="U_WIEN_FREQUENCY_DISPLACEMENT_LAW_CONSTANT") :: &
U_WIEN_FREQUENCY_DISPLACEMENT_LAW_CONSTANT= !! 

real(c_double), protected, bind(C,name="WIEN_WAVELENGTH_DISPLACEMENT_LAW_CONSTANT") :: &
WIEN_WAVELENGTH_DISPLACEMENT_LAW_CONSTANT= !! 
real(c_double), protected, bind(C,name="U_WIEN_WAVELENGTH_DISPLACEMENT_LAW_CONSTANT") :: &
U_WIEN_WAVELENGTH_DISPLACEMENT_LAW_CONSTANT= !! 

real(c_double), protected, bind(C,name="W_TO_Z_MASS_RATIO") :: &
W_TO_Z_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_W_TO_Z_MASS_RATIO") :: &
U_W_TO_Z_MASS_RATIO= !! 

end module codata
